package com.asi2.backendmarket.dto.user;

public class AuthDto {
	private String username;
	private String password;
	
	public AuthDto() {
	}

	public String getUsername() {
		return username;
	}

	public void setUsername(String username) {
		this.username = username;
	}

	public String getPassword() {
		return password;
	}

	public void setPassword(String password) {
		this.password = password;
	}
	
}
